@@ -212,6 +212,12 @@
     <Resource Include="Images\spinnaker_512.png" />
     <Resource Include="Images\spinnaker_full_image.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\close_black.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\close_white.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
