@@ -2,12 +2,44 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:Spinnaker.Controls" x:Name="textbox" x:Class="Spinnaker.UserInterface.Compose"
-        Title="Compose a new post" Height="203.846" Width="300" Topmost="True">
-    <Grid >
+        Title="Compose a new post" Height="171.046" Width="300" Topmost="True"
+    WindowStyle="None" AllowsTransparency="True"
+    Background="Transparent"
+    >
+    <Border Name="border_with_roundes_edges">
+    <Grid Background="Transparent" MouseMove="Grid_MouseMove_1">
         <Controls:AutoCompleteTextbox x:Name="autoCompeteTextbox_post" Margin="10,10,10,41"/>
         <Button Content="Send" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="75" Name="button_send" Click="button_send_Click"/>
         <ComboBox Name="combobox_accounts" HorizontalAlignment="Right" Margin="0,0,90,10" VerticalAlignment="Bottom" Width="120" >
-        </ComboBox>
-        <TextBlock Name="textblock_remaining_chars" HorizontalAlignment="Left" Margin="10,0,0,15" TextWrapping="NoWrap" Text="255" VerticalAlignment="Bottom" Width="24"/>
-    </Grid>
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{Binding Path=user.avatar_image.url}" Height="14" Margin="0,0,3,0" />
+                            <TextBlock Text="{Binding Path=user.username}" FontSize="12" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+        <TextBlock Name="textblock_remaining_chars" HorizontalAlignment="Left" Margin="10,0,0,15" TextWrapping="NoWrap" Text="255" VerticalAlignment="Bottom" Width="24" FontWeight="Bold" />
+            <Button Name="button_close_window" Click="button_close_window_Click_1" HorizontalAlignment="Right" VerticalAlignment="Top" Width="10" Height="10" Margin="0,3,10,0" ToolTip="Close window">
+                <Image Name="image_close_button" Source="/Spinnaker;component/Images/close_white.png">
+                    <Image.Style>
+                        <Style>
+                            <Setter Property="Image.Opacity" Value="0.7" />
+                            <Style.Triggers>
+                                <Trigger  Property="Image.IsMouseOver" Value="True">
+                                    <Setter Property="Image.Opacity" Value="1.0" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Image.Style>
+                </Image>
+                <Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <ContentPresenter Content="{TemplateBinding Content}" />
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+        </Grid>
+    </Border>
 </Window>
