@@ -1,15 +1,28 @@
 ﻿<Window x:Class="Spinnaker.UserInterface.Preferences"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Spinnaker Preferences" Height="350" Width="525"
+        Title="Spinnaker Preferences" Height="311.816" Width="266.692"
         Closing="Window_Closing_1" Icon="/Spinnaker;component/Images/spinnaker_512.png"
-        StateChanged="OnStateChanged" IsVisibleChanged="OnIsVisibleChanged">
-    <Grid Margin="0">
-        <TextBlock Margin="184,10,170.4,0" TextWrapping="Wrap" Text="Hello - this is Spinnaker :)" RenderTransformOrigin="0.155,0.565" TextAlignment="Center" Height="32" VerticalAlignment="Top"/>
-        <Button Content="Open compose windows (testing)" Margin="140,74,139.4,0" VerticalAlignment="Top" RenderTransformOrigin="-0.501,-0.232" Click="Button_Click_1"/>
-        <Button Content="Add another account" Name="button_add_another_account" Margin="140,47,139.4,0" VerticalAlignment="Top" Click="button_add_another_account_Click"/>
-        <ListView Name="listview_accounts" Margin="140,101,139.4,53.4" />
-        <Button Content="Hide preferences" Name="button_hide_preferences" HorizontalAlignment="Left" Margin="140,274,0,0" VerticalAlignment="Top" Width="115" Click="button_hide_preferences_Click_1" />
-        <Button Content="Exit app" Name="button_exit_app" HorizontalAlignment="Left" Margin="260,274,0,0" VerticalAlignment="Top" Width="119" Click="button_exit_app_Click_1"/>
-    </Grid>
+        StateChanged="OnStateChanged" IsVisibleChanged="OnIsVisibleChanged"
+          WindowStyle="None" AllowsTransparency="True"
+    Background="Transparent">
+    <Border Name="border_with_roundes_edges" MouseMove="border_with_roundes_edges_MouseMove_1">
+        <Grid Margin="0,0,-0.2,0.4">
+            <TextBlock Margin="10,10,0,0" TextWrapping="Wrap" Text="Hello - this is Spinnaker Alpha:)" RenderTransformOrigin="0.155,0.565" TextAlignment="Center" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="245"/>
+            <Button Content="Open compose windows (testing)" Margin="10,69,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.501,-0.232" Click="Button_Click_1" HorizontalAlignment="Left" Width="245"/>
+            <Button Content="Add another account" Name="button_add_another_account" Margin="10,42,0,0" VerticalAlignment="Top" Click="button_add_another_account_Click" HorizontalAlignment="Left" Width="245"/>
+            <ListBox Name="listview_accounts" Margin="10,96,0,47.6" Width="245" HorizontalAlignment="Left">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Image Source="{Binding Path=user.avatar_image.url}" Height="14" Margin="0,0,3,0" />
+                                <TextBlock Text="{Binding Path=user.username}" FontSize="12" />
+                            </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <Button Content="Hide preferences" Name="button_hide_preferences" HorizontalAlignment="Left" Margin="10,269,0,0" VerticalAlignment="Top" Width="115" Click="button_hide_preferences_Click_1" />
+            <Button Content="Exit app" Name="button_exit_app" HorizontalAlignment="Left" Margin="136,269,0,0" VerticalAlignment="Top" Width="119" Click="button_exit_app_Click_1"/>
+        </Grid>
+    </Border>
 </Window>
