@@ -1,5 +1,8 @@
 0.3
 Added tray icon
+Window layout changed (semi transparent, rounded corner, no more top bar)
+Clicking and holding the mouse in a window moves it
+Accounts listings (prefernces and combobox in compose window) now show the user avatar image
 
 0.2
 Upgrade to AppNet.NET 1.6.2
